feat: add tournaments
